objects/boxmigrate__OAuthSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>boxmigrate__AuthEndpoint__c</fullName>
        <label>Auth Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>boxmigrate__ClientId__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>boxmigrate__ClientSecret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OAuthSettings</label>
</CustomObject>